--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -2,12 +2,12 @@
 {% load static %}
 {% block content %}
 
-    <br>
-    <div class="container">
-        <h2 class="h2">Оставить поздравление:</h2>
-    </div>
-    <br>
-     <div class="container">
+<br>
+<div class="container">
+    <h2 class="h2">Оставить поздравление:</h2>
+</div>
+<br>
+<div class="container">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
@@ -16,31 +16,59 @@
                    class="form-control form-control-lg shadow p-3 mb-4 bg-white rounded"
                    id="exampleInputEmail1" name="author"
                    aria-describedby="emailHelp">
-                <small id="textHelp" class="form-text text-muted" style="margin-top: -10px;">Желательно не
-                только имя(можно даже кличку)</small>
+            <small id="textHelp" class="form-text text-muted" style="margin-top: -10px;">
+                Желательно не только имя(можно и прозвище)
+            </small>
         </div>
         <div class="form-group">
-            <label for="exampleFormControlTextarea1" class="label">Здесь пишите свое
-                поздравление</label>
+            <label for="exampleFormControlTextarea1" class="label">
+                Здесь пишите свое поздравление
+            </label>
             <textarea
                     class="form-control form-control-lg shadow p-3 mb-3 bg-white rounded"
                     name="message" id="exampleFormControlTextarea1"
                     rows="3"></textarea>
-            <small id="emailHelp" class="form-text text-muted">Было бы здорово
-                добавить к пожеланиям забавную историю связанную с
-                именниницей</small>
+            <small id="emailHelp" class="form-text text-muted">
+                Было бы здорово добавить к пожеланиям забавную историю связанную с именинницей
+            </small>
         </div>
         <div class="form-group">
             <div class="custom-file">
-                <input type="file" class="custom-file-input "
+                <input accept=".jpg, .jpeg, .png, .svg" type="file" class="custom-file-input "
                        id="inputGroupFile04" name="photo"
-                       aria-describedby="inputGroupFileAddon04">
-                <label class="custom-file-label" for="inputGroupFile04">Тыкните
-                    чтобы загрузить картинку</label>
+                       aria-describedby="inputGroupFileAddon04"
+                       onchange="
+                       const file = this.files[this.files.length - 1];
+                       const image = document.createElement('img')
+                       const previewItem = document.createElement('div')
+                       previewItem.classList.add('preview-item')
+                       const preview =  document.getElementById('preview-container');
+
+                       const getPreview = file => {
+                           const reader = new FileReader();
+
+                           reader.onload = ({target: {result}}) => {
+                               image.src = result;
+                               previewItem.appendChild(image);
+                           }
+
+                           reader.readAsDataURL(file);
+                       }
+
+                       getPreview(file);
+
+                       preview.appendChild(previewItem)"
+                >
+                <label class="custom-file-label" for="inputGroupFile04">
+                    А тут можно прикрепить фото
+                </label>
             </div>
         </div>
+        <div id="preview-container" class="preview-container">
+        </div>
+        <script src="{% static 'scripts/create-post.js' %}"></script>
         <button type="submit" class="btn btn-dark">Сохранить</button>
     </form>
-     </div>
+</div>
 
 {% endblock %}
