--- a/templates/list_post.html
+++ b/templates/list_post.html
@@ -3,13 +3,14 @@
 
 {% block content %}
     <div class="container-lg">
-        <div class="card-columns">
+        <div class="cards-wrapper">
     {% for post in object_list %}
-        <div class="card card-custom shadow-lg p-4" >
-          <img src="{{ post.photo.url }}" class="card-img-top" alt="...">
+        <div class="card card-custom p-4" >
+          <img src="{{ post.photo.url }}" class="card-image" alt="...">
           <div class="card-body">
-            <h4 class="card-title">Приятнейшее поздравление от {{ post.author }} </h4>
-            <a href="{{ post.get_absolute_url }}" class="btn btn-primary" style="margin-top: 10px">подробнее</a>
+              <div class="title-description">Автор</div>
+              <div class="congratulator">{{ post.author }}</div>
+            <a href="{{ post.get_absolute_url }}" class="perfect-btn" style="margin-top: 10px">Посмотреть</a>
           </div>
         </div>
     {% endfor %}
