--- a/templates/index.html
+++ b/templates/index.html
@@ -2,39 +2,38 @@
 {% load static %}
 {% block content %}
 
-    <div class="container-fluid">
-        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block img-fluid" src="https://witcher-tv.ru/wp-content/uploads/2019/12/ciri-pustynya-full-hd.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">htop
-                <h5>My Caption Title (1st Image)</h5>
-                <p>The whole caption will only show up if the screen is at least medium size.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="https://images.wallpaperscraft.ru/image/litso_ten_temnyj_130426_1920x1080.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="http://wallpapers1.ru/fud/data/eda_88_088.jpg" alt="Third slide">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-    </div>
+<!--    <div class="container-fluid">-->
+<!--        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">-->
+<!--    <ol class="carousel-indicators">-->
+<!--        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+<!--        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+<!--        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+<!--    </ol>-->
+<!--    <div class="carousel-inner">-->
+<!--        <div class="carousel-item active">-->
+<!--            <img class="d-block img-fluid" src="https://witcher-tv.ru/wp-content/uploads/2019/12/ciri-pustynya-full-hd.jpg" alt="First slide">-->
+<!--            <div class="carousel-caption d-none d-md-block">htop-->
+<!--                <h5>My Caption Title (1st Image)</h5>-->
+<!--                <p>The whole caption will only show up if the screen is at least medium size.</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="carousel-item">-->
+<!--            <img class="d-block w-100" src="https://images.wallpaperscraft.ru/image/litso_ten_temnyj_130426_1920x1080.jpg" alt="Second slide">-->
+<!--        </div>-->
+<!--        <div class="carousel-item">-->
+<!--            <img class="d-block w-100" src="http://wallpapers1.ru/fud/data/eda_88_088.jpg" alt="Third slide">-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+<!--        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--        <span class="sr-only">Previous</span>-->
+<!--    </a>-->
+<!--    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+<!--        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--        <span class="sr-only">Next</span>-->
+<!--    </a>-->
+<!--</div>-->
+<!--    </div>-->
 
 
 {% endblock %}
