--- a/static/custom_css/style.css
+++ b/static/custom_css/style.css
@@ -13,6 +13,7 @@ a {
     left: 0;
     top: 0;
     width: 100%;
+    z-index: -1;
 }
 
 .nav-link-custom {
@@ -34,13 +35,13 @@ a {
 }
 
 .nav-item {
-    margin: 0 15px;
+    margin: 10px 15px;
 }
 
 .navbar {
     justify-content: flex-end;
     padding: 15px;
-    margin: 70px 0 15px 0;
+    margin: 60px 0 15px 0;
 }
 
 .title-description {
@@ -71,11 +72,11 @@ a {
 }
 
 .perfect-btn {
-    position: relative;
+    position: absolute;
     display: block;
-    width: 200px;
-    top: 80px;
-    margin: 10px auto;
+    left: 20%;
+    bottom: -30px;
+    right: 20%;
     padding: 15px;
     border: none;
     border-radius: 50px;
@@ -92,20 +93,45 @@ a {
     color: white;
 }
 
+.cards-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .card-custom {
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: #f5f5f5;
-    border-radius: 10px;
+    align-items: center;
+    flex: 45%;
+    min-width: 300px;
+    height: 400px;
+    margin: 0 10px 100px 10px !important;
+    padding: 1.5rem;
     border: none;
-    margin: 0 20px 100px 0 !important;
+    border-radius: 10px;
+    background-color: #f5f5f5;
     box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.15);
 }
 
-.card-custom > img {
-    width: 200px;
-    height: 200px;
+.card-single_c {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 45%;
+    min-width: 300px;
+    margin: 0 10px 100px 10px !important;
+    padding: 1.5rem;
+    border: none;
+    border-radius: 10px;
+    background-color: #f5f5f5;
+    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.15);
+}
+
+.card-image {
+    width: 80%;
+    height: 60%;
     object-fit: cover;
     object-position: top;
 }
@@ -151,3 +177,123 @@ a {
     object-fit: cover;
     object-position: top;
 }
+
+
+.my-gallery {
+  width: 100%;
+  float: left;
+  border-radius: 10px;
+}
+.my-gallery img {
+  width: 100%;
+  height: 176px;
+
+}
+
+.img1 {
+    border-top-width: 80px;
+    border-left-width: 8px;
+    margin-left: 7px;
+    margin-top: 7px;
+    margin-right: 7px;
+    margin-bottom: 7px;
+}
+
+.my-gallery figure {
+  display: block;
+  float: left;
+  margin: 0 5px 5px 0;
+  width: 150px;
+}
+.my-gallery figcaption {
+  display: none;
+}
+
+
+.pswp__preloader__icn {
+  opacity:0.75;
+  width: 14px;
+  height: 14px;
+  -webkit-animation: clockwise 500ms linear infinite;
+  animation: clockwise 500ms linear infinite;
+}
+
+/* The idea of animating inner circle is based on Polymer loading indicator by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html */
+.pswp__preloader__cut {
+  position: relative;
+  width: 7px;
+  height: 14px;
+  overflow: hidden;
+
+    position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.pswp__preloader__donut--fake {
+   box-sizing: border-box;
+
+  width: 14px;
+	height: 14px;
+
+
+  border: 2px solid red;
+   border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+	background: none;
+	margin:0;
+}
+
+.pswp__preloader__donut {
+  box-sizing: border-box;
+
+  width: 14px;
+	height: 14px;
+
+
+  border: 2px solid #FFF;
+   border-radius: 50%;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+
+    position: absolute;
+  top: 0;
+  left: 0;
+
+
+
+	position: absolute;
+  top: 0;
+  left: 0;
+
+	background: none;
+	margin:0;
+
+    -webkit-animation: donut-rotate 1000ms cubic-bezier(.4,0,.22,1) infinite;
+  animation: donut-rotate 1000ms cubic-bezier(.4,0,.22,1) infinite;
+
+}
+
+
+@-webkit-keyframes clockwise {
+  0% { -webkit-transform: rotate(0deg) }
+  100% { -webkit-transform: rotate(360deg) }
+}
+@keyframes clockwise {
+  0% { transform: rotate(0deg) }
+  100% { transform: rotate(360deg) }
+}
+@-webkit-keyframes donut-rotate {
+  0% { -webkit-transform: rotate(0) }
+  50% { -webkit-transform: rotate(-140deg) }
+  100% { -webkit-transform: rotate(0) }
+}
+@keyframes donut-rotate {
+  0% { transform: rotate(0) }
+  50% { transform: rotate(-140deg) }
+  100% { transform: rotate(0) }
+}
+
