--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -3,30 +3,17 @@
 
 {% block content %}
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
+
+  <div class="container-lg">
+        <div class="card card-single_c p-4" >
+          <img src="{{ post.photo.url }}" class="card-image" alt="...">
+          <div class="card-body">
+              <div class="title-description">Пожелания</div>
+              <div class="congratulator">{{ post.message }}</div>
+          </div>
+        </div>
+
 </div>
 
 
