--- a/static/custom_css/style.css
+++ b/static/custom_css/style.css
@@ -180,14 +180,16 @@ a {
 
 
 .my-gallery {
-  width: 100%;
-  float: left;
-  border-radius: 10px;
+    width: 100%;
+    float: left;
+    border-radius: 10px;
 }
-.my-gallery img {
-  width: 100%;
-  height: 176px;
 
+.my-gallery img {
+    width: 100%;
+    height: 176px;
+    object-fit: cover;
+    object-position: top;
 }
 
 .img1 {
@@ -200,100 +202,123 @@ a {
 }
 
 .my-gallery figure {
-  display: block;
-  float: left;
-  margin: 0 5px 5px 0;
-  width: 150px;
+    display: block;
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 150px;
 }
+
 .my-gallery figcaption {
-  display: none;
+    display: none;
 }
 
 
 .pswp__preloader__icn {
-  opacity:0.75;
-  width: 14px;
-  height: 14px;
-  -webkit-animation: clockwise 500ms linear infinite;
-  animation: clockwise 500ms linear infinite;
+    opacity: 0.75;
+    width: 14px;
+    height: 14px;
+    -webkit-animation: clockwise 500ms linear infinite;
+    animation: clockwise 500ms linear infinite;
 }
 
 /* The idea of animating inner circle is based on Polymer loading indicator by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html */
 .pswp__preloader__cut {
-  position: relative;
-  width: 7px;
-  height: 14px;
-  overflow: hidden;
+    position: relative;
+    width: 7px;
+    height: 14px;
+    overflow: hidden;
 
     position: absolute;
-  top: 0;
-  left: 0;
+    top: 0;
+    left: 0;
 }
 
 .pswp__preloader__donut--fake {
-   box-sizing: border-box;
+    box-sizing: border-box;
 
-  width: 14px;
-	height: 14px;
+    width: 14px;
+    height: 14px;
 
 
-  border: 2px solid red;
-   border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
+    border: 2px solid red;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-	background: none;
-	margin:0;
+    background: none;
+    margin: 0;
 }
 
 .pswp__preloader__donut {
-  box-sizing: border-box;
+    box-sizing: border-box;
 
-  width: 14px;
-	height: 14px;
+    width: 14px;
+    height: 14px;
 
 
-  border: 2px solid #FFF;
-   border-radius: 50%;
-  border-left-color: transparent;
-  border-bottom-color: transparent;
+    border: 2px solid #FFF;
+    border-radius: 50%;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
 
     position: absolute;
-  top: 0;
-  left: 0;
+    top: 0;
+    left: 0;
 
 
+    position: absolute;
+    top: 0;
+    left: 0;
 
-	position: absolute;
-  top: 0;
-  left: 0;
+    background: none;
+    margin: 0;
 
-	background: none;
-	margin:0;
-
-    -webkit-animation: donut-rotate 1000ms cubic-bezier(.4,0,.22,1) infinite;
-  animation: donut-rotate 1000ms cubic-bezier(.4,0,.22,1) infinite;
+    -webkit-animation: donut-rotate 1000ms cubic-bezier(.4, 0, .22, 1) infinite;
+    animation: donut-rotate 1000ms cubic-bezier(.4, 0, .22, 1) infinite;
 
 }
 
 
 @-webkit-keyframes clockwise {
-  0% { -webkit-transform: rotate(0deg) }
-  100% { -webkit-transform: rotate(360deg) }
+    0% {
+        -webkit-transform: rotate(0deg)
+    }
+    100% {
+        -webkit-transform: rotate(360deg)
+    }
 }
+
 @keyframes clockwise {
-  0% { transform: rotate(0deg) }
-  100% { transform: rotate(360deg) }
+    0% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(360deg)
+    }
 }
+
 @-webkit-keyframes donut-rotate {
-  0% { -webkit-transform: rotate(0) }
-  50% { -webkit-transform: rotate(-140deg) }
-  100% { -webkit-transform: rotate(0) }
+    0% {
+        -webkit-transform: rotate(0)
+    }
+    50% {
+        -webkit-transform: rotate(-140deg)
+    }
+    100% {
+        -webkit-transform: rotate(0)
+    }
 }
+
 @keyframes donut-rotate {
-  0% { transform: rotate(0) }
-  50% { transform: rotate(-140deg) }
-  100% { transform: rotate(0) }
+    0% {
+        transform: rotate(0)
+    }
+    50% {
+        transform: rotate(-140deg)
+    }
+    100% {
+        transform: rotate(0)
+    }
 }
 
