--- a/app/static/custom_css/style.css
+++ b/app/static/custom_css/style.css
@@ -185,9 +185,10 @@ a {
   border-radius: 10px;
 }
 .my-gallery img {
-  width: 100%;
-  height: 176px;
-
+    width: 100%;
+    height: 176px;
+    object-fit: cover;
+    object-position: top;
 }
 
 .img1 {
