master [fix] fix typo

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -16,7 +16,7 @@
                    class="form-control form-control-lg shadow p-3 mb-4 bg-white rounded"
                    id="exampleInputEmail1" name="author"
                    aria-describedby="emailHelp">
-            <small id="exampleInputEmail1" class="text-danger"> {% if  form.author.errors %}Это поле обязательно нудно заполнить{% endif %} </small>
+            <small id="exampleInputEmail1" class="text-danger"> {% if  form.author.errors %}Это поле обязательно нужно заполнить{% endif %} </small>
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1" class="label">
@@ -29,7 +29,7 @@
             <small id="emailHelp" class="form-text text-muted">
                 Было бы здорово добавить к пожеланиям забавную историю связанную с именинницей
             </small>
-            <small id="exampleFormControlTextarea1" class="text-danger"> {% if  form.message.errors %}Это поле обязательно нудно заполнить{% endif %} </small>
+            <small id="exampleFormControlTextarea1" class="text-danger"> {% if  form.message.errors %}Это поле обязательно нужно заполнить{% endif %} </small>
         </div>
         <div class="form-group">
             <div class="custom-file">
@@ -61,7 +61,7 @@
                 <label class="custom-file-label" for="inputGroupFile04">
                     А тут можно прикрепить фото
                 </label>
-                <small id="inputGroupFile04" class="text-danger"> {% if  form.photo.errors %}Это поле обязательно нудно заполнить{% endif %} </small>
+                <small id="inputGroupFile04" class="text-danger"> {% if  form.photo.errors %}Это поле обязательно нужно заполнить{% endif %} </small>
 
             </div>
         </div>
